# maestro

./: .dockerignore  .env.example  .gitignore  .publish-exclude  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MARIO_PATTERN.md  Makefile  README.md  REVIEW.md  SECURITY.md  biome.json  buf.gen.yaml  bun.lockb  docker-compose.yml  drizzle.config.ts  file.txt  flake.nix  nx.json  openapi.json  package-lock.json  package.json  project.json  todo.md  tool-versions.json  tsconfig.base.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  undefined  vitest.config.ts
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PUBLIC_TREE_MIRROR_BOUNDARY.md  RELEASE_MIRROR_CONTRACT.md  dependabot.yml  pull_request_template.md  release-mirror-manifest.json
.husky/: pre-commit
.maestro/: workspace.json
docs/: AGENT_EVENTS.md  AGENT_INTERNALS.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BUILD_TESTING.md  CI_VERSION_PINS.md  CODEBASE_ANALYSIS.md  CONDUCTOR_BRIDGE.md  CONTRIBUTOR_RUNBOOK.md  ENTERPRISE.md  EXTENSION_SYSTEM_ANALYSIS.md  FEATURES.md  MCP_GUIDE.md  MODELS.md  PROMPT_QUEUE.md  QUICKSTART.md  README.md  SAFETY.md  SESSIONS.md  THREAT_MODEL.md  TOOLS_REFERENCE.md  TUI_ARCHITECTURE.md  VSCODE_ARCHITECTURE.md  WEB-UI.md  WEB_UI.md  WEB_UI_PARITY.md  config-improvements-phase3.md  config-improvements-research.md  mcp-config.md  opencode-parity.md  release-ops.md  system-paths.json
evals/: scenarios.json
examples/hooks/wasm-plugin/: Cargo.toml  README.md
examples/hooks/wasm-plugin/src/: lib.rs
(+1989 files in other folders)
