[package]
name = "safety-plugin"
version = "0.1.0"
edition = "2021"
description = "Example WASM safety hook plugin for Composer"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
strip = true         # Strip symbols
